# faceRec_ros2

./: .gitignore  README.md
faceRec/: .gitignore  README.md  adaface.py  main.py
faceRec/embed/: features.pt  ids.pt
faceRec/face_alignment/: align.py
faceRec/scripts/: run_adaface.sh
yolov8_bringup/: CMakeLists.txt
yolov8_bringup/launch/: adaface.launch.py  yolov8.launch.py  yolov8_3d.launch.py
yolov8_msgs/: CMakeLists.txt
yolov8_msgs/msg/: FaceID.msg  FaceIDArray.msg
yolov8_ros/: package.xml  setup.py
yolov8_ros/yolov8_ros/: adaface_node.py  yolov8_node.py
